<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/content_as17_134_20382_thumb"
    android:foregroundTint="#FFFFFF"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="31dp" />

    <TextView
        android:id="@+id/txtTextGreeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Historical Figures and Your Date of Birth"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <TextView
        android:id="@+id/txtAge"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:text="Enter Your Date of Birth"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="36dp" />

    <EditText
        android:id="@+id/edtUserAge"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:inputType="number"
        android:text="DOB:"
        android:textColor="#FFFFFF" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="32dp" />

    <Button
        android:id="@+id/btnGenerateData"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Generate Data"
        android:textSize="16sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="73dp" />

    <TextView
        android:id="@+id/txtData"
        android:layout_width="370dp"
        android:layout_height="235dp"
        android:layout_gravity="center_horizontal"
        android:background="#673AB7"
        android:textColor="#000000"
        android:textSize="20sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="34dp" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Clear"
        android:textColorHighlight="#BFA75F"
        android:textColorLink="#E6C563"
        android:textSize="20sp" />

</LinearLayout>